Adjust to Matrix constructor changes