@@ -16,6 +16,7 @@ import se.alipsa.groovy.matrix.Matrix;
 import java.io.IOException;
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -144,13 +145,12 @@ public class DeepCopyTest {
   @Test
   public void testCopyBarchart2() {
 
-    var empData = Matrix.create(
-        Map.of(
-          "emp_id", Arrays.asList(1,2,3,4,5),
-          "emp_name", Arrays.asList("Rick","Dan","Michelle","Ryan","Gary"),
-          "salary", Arrays.asList(623.3,515.2,611.0,729.0,843.25),
-          "start_date", toLocalDates("2012-01-01", "2013-09-23", "2014-11-15", "2014-05-11", "2015-03-27")),
-        Arrays.asList(int.class, String.class, Number.class, LocalDate.class));
+    var empData = new Matrix (Map.of(
+        "emp_id", Arrays.asList(1,2,3,4,5),
+        "emp_name", Arrays.asList("Rick","Dan","Michelle","Ryan","Gary"),
+        "salary", Arrays.asList(623.3,515.2,611.0,729.0,843.25),
+        "start_date", toLocalDates("2012-01-01", "2013-09-23", "2014-11-15", "2014-05-11", "2015-03-27")),
+        List.of(int.class, String.class, Number.class, LocalDate.class));
 
     var chart = se.alipsa.groovy.charts.BarChart.createVertical("Salaries", empData, "emp_name", ChartType.BASIC, "salary");
     Node jChart = Plot.jfx(chart);
